# seminario

./: .dockerignore  .gitignore  Dockerfile  Hito3_Informe_Tecnico.docx  README.md  docker-compose.yml  main.py  pyproject.toml  reauth.py  reauth_manual.py  test_google_drive.py
.claude/: settings.local.json
airflow/: docker-compose.yaml
airflow/config/: .gitkeep
airflow/dags/: seminario_etl_dag.py
airflow/plugins/: .gitkeep
analysis/: __init__.py  bootstrap.py  did.py  its.py  queries.py  runner.py  tendencias.py
config/: global.py  globals.py  sources.py
dags/: seminario_etl_dag.py
dashboard/: app.py
data/raw/: _manifest.json
data/raw/snies/administrativos/: administrativos-2018.xlsx  administrativos-2019.xlsx  administrativos-2020.xlsx  administrativos-2021.xlsx  administrativos-2022.xlsx  administrativos-2023.xlsx  administrativos-2024.xlsx
data/raw/snies/admitidos/: admitidos-2023.xlsx
data/raw/snies/docentes/: docentes-2018.xlsx  docentes-2019.xlsx  docentes-2020.xlsx  docentes-2022.xlsx  docentes-2024.xlsx
docs/: DEPLOY_VPS.md  Rúbrica_para_el_Trabajo_de_Curso.md  column_analysis.md  metodologia_hito3.md  star_schema_design.md
etl/: dictionary.py  ingest.py  pipeline.py  quality.py  transform.py  upload.py
notebooks/: hito3_analisis.ipynb
scripts/: create_db.py  create_dimensions.py  create_facts.py  create_indexes.py  create_schemas.py  create_sqlite_db.py  download_drive_files.py  eda_column_analysis.py  generate_report.py  normalize_data.py  reauth_write.py  setup_airflow.sh  split_databases.py  start_airflow.sh  test_upload.py  unify_by_year.py
tests/: list_drive_files.py  test_google_drive.py
tests/drive/: list_drive_files.py  test_google_drive.py
utils/: db.py  google_auth.py  logger.py  schema_helpers.py  text.py
