[project]
name = "seminario"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=2.8.0",
    "dotenv>=0.9.9",
    "gdown>=5.2.1",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "great-expectations>=1.13.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "streamlit>=1.19.0",
]
