[project]
name = "seminario"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gdown>=5.2.1",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "great-expectations>=1.13.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.44.0",
]
