[project]
name = "seminario"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gdown>=5.2.1",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "great-expectations>=1.13.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.0",
    "numpy>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.2.1",
    "scipy>=1.15.0",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.0",
    "streamlit>=1.19.0",
    "python-docx>=1.1.0",
]
